--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: #03a9fc;
+            background-color: #C1D8C3;
         }
         .container {
             display: none;
@@ -144,7 +144,10 @@
 <body>
     <!-- Màn hình Login -->
     <div id="login" class="container active">
-        <h2>Đăng Nhập</h2>
+        <h1>Đăng Nhập</h1>
+        <div style="height: 50px"></div>
+        <img src="https://www.hdsaison.com.vn/vnt_upload/weblink/Logo_website_01.png">
+        <div style="height: 50px"></div>
         <input type="text" placeholder="Tên đăng nhập">
         <input type="password" placeholder="Mật khẩu">
         <button class="login-btn" onclick="showScreen('home')">Đăng nhập</button>
