--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
             <input class="input-field" type="text" placeholder="Số Căn Cước Công Dân">
             <input class="input-field" type="text" placeholder="Số Điện Thoại">
             <input class="input-field" type="text" placeholder="Giới Tính">
-            <div style="text-align: left;">
+           <div style="text-align: left;">
                 <p>Ngày Sinh:</p>
-                <input class="input-field" type="date" onfocus="this.showPicker()" placeholder="DD-MM-YYYY">
+                <input class="input-field" type="date" onfocus="this.showPicker()" placeholder="DD-MM-YYYY" value="01-01-1900">
             </div>
             <div style="text-align: left;">
                 <p>Thời Gian Vi Phạm:</p>
-                <input class="input-field" type="datetime-local" onfocus="this.showPicker()" placeholder="DD-MM-YYYY hh:mm">
+                <input class="input-field" type="datetime-local" onfocus="this.showPicker()" placeholder="DD-MM-YYYY hh:mm" value="01-01-1900 12:00">
             </div>
             <input class="input-field" type="file" accept="image/*">
             <button class="input-info-btn">Lưu Thông Tin</button>
